@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-23T01:03:04Z",
-  "count" : 225,
+  "timestamp" : "2024-02-23T08:18:14Z",
+  "count" : 133,
   "count_minmax" : [ 112, 300 ],
-  "count_decinc" : [ -75, +300 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -167, +300 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
