@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-02-23T01:03:04Z",
+  "timestamp" : "2024-02-23T08:18:14Z",
   "count_outdated" : 190334,
   "uniques_outdated" : 1948,
-  "count" : 194522,
-  "uniques" : 1966,
+  "count" : 194634,
+  "uniques" : 1968,
   "clones" : [
     {
       "timestamp": "2024-02-09T00:00:00Z",
-      "count": 225,
+      "count": 133,
       "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 75, 300 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 167, 300 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2024-02-10T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 301,
       "count_minmax": [ 112, 301 ],
       "count_decinc": [ 0, 301 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-02-23T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
