@@ -1,11 +1,11 @@
 {
-  "count": 4113,
+  "count": 4133,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2024-02-09T00:00:00Z",
-      "count": 225,
-      "uniques": 2
+      "count": 133,
+      "uniques": 1
     },
     {
       "timestamp": "2024-02-10T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-02-22T00:00:00Z",
       "count": 301,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2024-02-23T00:00:00Z",
+      "count": 112,
       "uniques": 2
     }
   ]
